--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
   <title>Demo Shop — BTS merch (тест)</title>
   <!-- ИНИЦИАЛИЗАЦИЯ dataLayer (важно сделать до GTM HEAD) -->
   <script>window.dataLayer = window.dataLayer || [];</script>
-  <!-- GTM_HEAD_SNIPPET --> 
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-WTH69FR9');</script>
+<!-- End Google Tag Manager --> 
   <style>
     body{font-family:Arial,Helvetica,sans-serif;margin:16px;background:#fafafa}
     h1{text-align:center;color:#333}
@@ -23,7 +29,10 @@
   </style>
 </head>
 <body>
-  <!-- GTM_BODY_SNIPPET -->
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WTH69FR9"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
   <h1>Demo Shop — BTS атрибутика (тест)</h1>
   <p style="text-align:center">Цей тестовий магазин зроблено для практики налаштувань Google Tag Manager і GA4. Кнопки пушать dataLayer події.</p>
 
