--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Demo Shop — BTS merch (тест)</title>
   <!-- ИНИЦИАЛИЗАЦИЯ dataLayer (важно сделать до GTM HEAD) -->
   <script>window.dataLayer = window.dataLayer || [];</script>
+  <!-- GTM_HEAD_SNIPPET --> 
   <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -29,6 +30,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   </style>
 </head>
 <body>
+  <!-- GTM_BODY_SNIPPET -->
   <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WTH69FR9"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
