--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!-- version: 2025-10-19 20:30 -->
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Expires" content="0">
 <!doctype html>
 <html lang="uk">
 <head>
